src/quantum_circuit/qlog/qlog_engine/qlog_stats.h

#include <stdio.h>
#include <stdlib.h>

#ifndef QLOG_STATS_H
#define QLOGSTATS_H

typedef struct qlog_stats_def {
  int test; 
} qlog_stats;

typedef struct qlog_entry_stats_def {

} qlog_entry_stats;

#endif 